methods.flowerpot.FlowerPot.scala.error
Erreur de compilation :
FlowerPot:6: error: not found: value Coor
  flower(Color.YELLOW,Coor.CYAN)
                      ^